# pyinstrument-plugin

./: README.md  setup.cfg  setup.py
src/deephaven/plugin/pyinstrument/: __init__.py  _register.py  pyinstrument_object.py  pyinstrument_type.py
src/js/: package-lock.json  package.json  vite.config.ts
src/js/src/: PyinstrumentPlugin.ts  PyinstrumentView.tsx  index.ts
