[metadata]
name = deephaven-plugin-pyinstrument
description = Deephaven plugin for displaying pyinstrument profiling reports
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1.dev0
keywords = deephaven, plugin, pyinstrument, profiling
author = Anonymous
author_email = Anonymous
platforms = any

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-plugin>=0.6.0
    pyinstrument>=4.0.0
    deephaven-plugin-utilities
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.plugin.pyinstrument._register:PyinstrumentRegistration
