[metadata]
name = deephaven-plugin-pyinstrument
description = Deephaven plugin for displaying pyinstrument profiling reports
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.2
keywords = deephaven, plugin, pyinstrument, profiling
author = Germain Zhang-Houle
author_email = germainzhanghoule@gmail.com
platforms = any
url = https://github.com/gzh2003/pyinstrument-plugin
project_urls =
    Source Code = https://github.com/gzh2003/pyinstrument-plugin
    Bug Tracker = https://github.com/gzh2003/pyinstrument-plugin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: Plugins
    Development Status :: 3 - Alpha

[options]
package_dir=
    =src
packages=find_namespace:
install_requires =
    deephaven-plugin>=0.6.0
    pyinstrument>=4.0.0
    deephaven-plugin-utilities
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
deephaven.plugin =
    registration_cls = deephaven.plugin.pyinstrument._register:PyinstrumentRegistration
